callbacks.js updated

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,8 @@
             "type": "node",
             "request": "launch",
             "name": "Launch Program",
-            "program": "${workspaceFolder}/assignments\\objects.js"
+            "program": "${workspaceFolder}/assignments\\callbacks.js",
+            
         }
     ]
 }
