--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "node",
             "request": "launch",
             "name": "Launch Program",
-            "program": "${workspaceFolder}/assignments\\arrays.js"
+            "program": "${workspaceFolder}/assignments\\objects.js"
         }
     ]
 }
